--- a/零碎收集/12.选择地址/index.html
+++ b/零碎收集/12.选择地址/index.html
@@ -6,57 +6,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="js/cityData.js"></script>
-    <script src="js/city.js"></script>
-
 </head>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    .select-add {
+        margin: 50px;
+        width: 200px;
+        line-height: 30px;
+        border: 1px solid #333;
+    }
+
+    .none {
+        display: none;
+    }
+
+    .province {
+        width: 100%;
+        height: 200px;
+        position: absolute;
+        bottom: -350px;
+    }
+
+    .sure {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        border-radius: 8px;
+        border: 1px solid #333;
+        background: #ffffff;
+        margin-bottom: 5px;
+    }
+
+    .select {
+        width: 100%;
+        line-height: 30px;
+        margin: 40px 0 20px 0;
+        border-top: 1px solid #333;
+        border-bottom: 1px solid #333;
+        font-size: 12px;
+    }
+
+    .select span {
+        display: inline-block;
+        width: 32%;
+        text-align: center;
+    }
+
+    .select_text {
+        width: 100%;
+        height: 100px;
+    }
+
+    .select_text>div {
+        float: left;
+        width: 33%;
+        height: 90px;
+        margin: auto 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .select_text>div ul {
+        list-style: none;
+        text-align: center;
+        font-size: 12px;
+    }
+</style>
 
 <body>
-    <div class="inpu_province">
-        <span class="area">省市区</span>
-        <span class="triange_tip"></span>
+    <div class="select-add">
+        点我选择地址
     </div>
-    <div class="province_cnt none">
-        <div class="select_province">
-            <p class="sure_close">确定</p>
-            <div class="select_cnt">
-                <p><span id="province" value="-1">所在省</span></p>
-                <span class="triang1"></span>
-                <p><span id="citys" value="-1">所在市</span></p>
-                <span class="triang2"></span>
-                <p><span id="county" value="-1">所在区</span></p>
-                <span class="triang3"></span>
+    <div class="province none" style="background:#ccc;">
+        <p class="sure">确定</p>
+        <div class="select">
+            <span id="province" value="-1">所在省</span>
+            <span id="citys" value="-1">所在市</span>
+            <span id="county" value="-1">所在区</span>
+        </div>
+        <div class="select_text">
+            <div class="pro">
+                <ul id="choosePro"></ul>
             </div>
-            <div class="select_text">
-                <div class="pro">
-                    <ul id="choosePro"></ul>
-                </div>
-                <div class="city">
-                    <ul id="chooseCity"></ul>
-                </div>
-                <div class="country">
-                    <ul id="chooseCounty"></ul>
-                </div>
+            <div class="city">
+                <ul id="chooseCity"></ul>
+            </div>
+            <div class="country">
+                <ul id="chooseCounty"></ul>
             </div>
         </div>
     </div>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="js/cityData.js"></script>
+    <script src="js/city.js"></script>
     <script>
-        //选择省市区弹窗
-        $(".inpu_province").click(function () {
-            $(".province_cnt").show().animate({ "bottom": "0" }, 500);
+        $(".select-add").click(function () {
+            $(".province").show().animate({ "bottom": "0" }, 500);
         })
 
-        $(".sure_close").click(function () {
+        $(".sure").click(function () {
             var pro = $("#province").html();
             var cit = $("#citys").html();
             var cou = $("#county").html();
-            $(".province_cnt").animate({ "bottom": "-13rem" }, 500);
+            $(".province").animate({ "bottom": "-13rem" }, 500);
             if (pro == "所在省") {
-                $(".inpu_province .area").html("省市区");
+                $(".select-add").html("省市区");
             } else {
-                $(".inpu_province .area").html(pro + cit + cou);
+                $(".select-add").html(pro + cit + cou);
             }
         })
     </script>
